# cheetah

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  config.mk
.github/workflows/: handcomp-tests.yml
bench/: .gitignore  Makefile  cholesky.c  cilksort.c  fft.c  fib.c  getoptions.c  heat.c  list.txt  lu.c  matmul_4_way_z.c  mm_dac.c  nqueens.c  run.pl  strassen.c
cmake/: CilkThreadsConfig.cmake.in  base-config-ix.cmake  config-ix.cmake
cmake/Modules/: AddCheetah.cmake  AllSupportedArchDefs.cmake  CheetahDarwinUtils.cmake  CheetahMockLLVMCMakeConfig.cmake  CheetahTests.cmake  CheetahUtils.cmake  HandleCheetahFlags.cmake  HandleCompilerRT.cmake  HandleOutOfTreeLLVM.cmake  MacroEnsureOutOfSourceBuild.cmake
doc/: REDUCER_PROTOCOL
handcomp_test/: Makefile  ZERO.c  c2cilk.c  cilksort.c  fib.c  getoptions.c  ktiming.c  ktiming.h  mm_dac.c  nqueens.c
handcomp_test/include/c2cilk/: c2cilk.h
handcomp_test/include/c2cilk/internal/: backend.h  expand.h  util.h  validation.h
handcomp_test/include/c2cilk/internal/backends/: cilk.h  clang.h  common.h
include/: CMakeLists.txt
include/cilk/: cilk.h  cilk_api.h  cilk_stub.h  holder.h  hyperobject_base.h  metaprogramming.h  opadd_reducer.h  ostream_reducer.h  reducer.h  reducer_list.h  reducer_min_max.h  reducer_opadd.h  reducer_opand.h  reducer_opmul.h  reducer_opor.h  reducer_opxor.h  reducer_ostream.h
reducer_bench/: .gitignore  Makefile  cppsum.cpp  getoptions.h  intlist.c  intlist.h  intsum.c  multispawnsum.c  repeatedintsum.c  serialsum.c  setup.sh
reducer_bench/nqueens/: .gitignore  Makefile  board.c  board.h  fasttime.h  ktiming.c  ktiming.h  nqueens.c  nqueens_int.c
reducer_bench/quad_tree/: .gitignore  Makefile  bin.c  bin.h  clint.py  collision_world.c  collision_world.h  graphic_stuff.c  graphic_stuff.h  intersection_detection.c  intersection_detection.h  intersection_event_list.c  intersection_event_list.h  line.h  line_demo.c  line_demo.h  qtree.c  qtree.h  reducer_defs.c  reducer_defs.h  screensaver.c  vec.c  vec.h
reducer_bench/quad_tree/input/: apple.in  beaver.in  box.in  explosion.in  mit.in  sin_wave.in  smalllines.in
runtime/: CMakeLists.txt  Makefile  TODOS.txt  ZERO.c  c_reducers.c  cilk-internal.h  cilk2c.c  cilk2c.h  cilk2c_inlined.c  cilkred_map.c  cilkred_map.h  closure-type.h  closure.c  closure.h  cmdline.c  cmdline.h  debug.c  debug.h  fiber-header.h  fiber-pool.c  fiber.c  fiber.h  frame.h  global.c  global.h  hyperobject_base.h  hypertable.c  hypertable.h  init.c  init.h  internal-malloc-impl.h  internal-malloc.c  internal-malloc.h  invoke-main.c  jmpbuf.h  local-hypertable.c  local-hypertable.h  local-reducer-api.c  local-reducer-api.h  local.h  (+24 more)
unittests/: Makefile  mock-local-hypertable-hash.h  mock-local-hypertable-old-hash.h  test-hypertable-common.h  test-hypertable.c  test-old-hash-hypertable.c
